--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -372,8 +372,8 @@ if(NOT WIN32)
 		message(STATUS "Using bundled ncurses in '${CURSES_BUNDLE_DIR}'")
 
 		ExternalProject_Add(ncurses
-			URL "http://download.draios.com/dependencies/ncurses-6.0-20150725.tgz"
-			URL_MD5 "32b8913312e738d707ae68da439ca1f4"
+			URL "https://download.falco.org/dependencies/ncurses-6.0-20150725.tgz"
+			URL_HASH "SHA256=3c1d9534d6d5b3a691d23199a7621f25ffbfa0ccc333f680fcdfc192ea362c84"
 			CONFIGURE_COMMAND ./configure --without-cxx --without-cxx-binding --without-ada --without-manpages --without-progs --without-tests --with-terminfo-dirs=/etc/terminfo:/lib/terminfo:/usr/share/terminfo
 			BUILD_COMMAND ${CMD_MAKE}
 			BUILD_IN_SOURCE 1
